--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
 @import "@fortawesome/fontawesome-free/css/all.css";
+@import "./lexical-content.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
