--- a/resources/css/lexical-content.css
+++ b/resources/css/lexical-content.css
@@ -329,6 +329,15 @@
     box-shadow: 0 15px 45px rgba(15, 23, 42, 0.12);
 }
 
+.lexical-content .lexical__paragraph.lexical__align-center img,
+.lexical-content .lexical__paragraph[data-text-align="center"] img,
+.lexical-content .lexical__paragraph[style*="text-align: center"] img,
+.lexical-content .lexical__paragraph[style*="text-align:center"] img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .lexical-content figure {
     margin: 1.5rem auto;
     text-align: center;
